@@ -1,10 +1,13 @@
 package com.distributionsys.backend.services;
 
 import com.distributionsys.backend.dtos.request.NewExportBillRequest;
+import com.distributionsys.backend.dtos.request.PaginatedRelationshipRequest;
 import com.distributionsys.backend.dtos.request.PaginatedTableRequest;
 import com.distributionsys.backend.dtos.response.ExportBillDetailsResponse;
 import com.distributionsys.backend.dtos.response.TablePagesResponse;
 import com.distributionsys.backend.dtos.utils.ExportBillFilterRequest;
+import com.distributionsys.backend.dtos.utils.ExportBillWarehouseGoodsFilterRequest;
+import com.distributionsys.backend.entities.redis.FluxedGoodsFromWarehouse;
 import com.distributionsys.backend.entities.sql.ExportBill;
 import com.distributionsys.backend.entities.sql.relationships.ExportBillWarehouseGoods;
 import com.distributionsys.backend.enums.ErrorCodes;
@@ -12,8 +15,10 @@ import com.distributionsys.backend.exceptions.ApplicationException;
 import com.distributionsys.backend.mappers.PageMappers;
 import com.distributionsys.backend.repositories.*;
 import com.distributionsys.backend.services.auth.JwtService;
+import com.distributionsys.backend.services.redis.RedisFGFWHTemplateService;
 import com.distributionsys.backend.services.webflux.FluxedAsyncService;
 import jakarta.persistence.OptimisticLockException;
+import jakarta.transaction.Transactional;
 import lombok.AccessLevel;
 import lombok.RequiredArgsConstructor;
 import lombok.experimental.FieldDefaults;
@@ -21,13 +26,7 @@ import lombok.extern.slf4j.Slf4j;
 import org.springframework.data.domain.Page;
 import org.springframework.data.domain.PageRequest;
 import org.springframework.data.domain.Pageable;
-import org.springframework.scheduling.annotation.Async;
-import org.springframework.scheduling.annotation.EnableAsync;
 import org.springframework.stereotype.Service;
-import org.springframework.transaction.PlatformTransactionManager;
-import org.springframework.transaction.TransactionDefinition;
-import org.springframework.transaction.TransactionStatus;
-import org.springframework.transaction.support.DefaultTransactionDefinition;
 
 import java.time.LocalDateTime;
 import java.util.ArrayList;
@@ -36,14 +35,11 @@ import java.util.Objects;
 import java.util.stream.Collectors;
 
 @Service
-@EnableAsync
 @RequiredArgsConstructor
 @Slf4j
 @FieldDefaults(level = AccessLevel.PRIVATE, makeFinal = true)
 public class ExportBillService {
-
-    PlatformTransactionManager transactionManager;
-    FluxedGoodsFromWarehouseCrud fluxedGoodsFromWarehouseCrud;
+    RedisFGFWHTemplateService redisFGFWHTemplateService;
     WarehouseGoodsRepository warehouseGoodsRepository;
     ExportBillWarehouseGoodsRepository exportBillWarehouseGoodsRepository;
     ExportBillRepository exportBillRepository;
@@ -82,7 +78,7 @@ public class ExportBillService {
         }
     }
 
-    @Async
+    @Transactional(rollbackOn = {RuntimeException.class, OptimisticLockException.class})
     public void createExportBill(String accessToken, NewExportBillRequest request) {
         var email = jwtService.readPayload(accessToken).get("sub");
         var clientInfo = clientInfoRepository.findByUserEmail(email)
@@ -99,15 +95,12 @@ public class ExportBillService {
                     throw new ApplicationException(ErrorCodes.NOT_ENOUGH_QUANTITY_TO_EXPORT);
                 updatedWarehouseGoodsList.get(index).setCurrentQuantity(updatedQuantity);
             }
-            var transDef = new DefaultTransactionDefinition(TransactionDefinition.PROPAGATION_REQUIRED);
-            TransactionStatus transStatus = transactionManager.getTransaction(transDef);
             try {
                 try {
                     //--May throw OptimisticLockException by @Version when updating (existing-id-value entities)
                     warehouseGoodsRepository.saveAll(updatedWarehouseGoodsList);
                 } catch (OptimisticLockException e) {
                     log.info("Retry creating ExportBill by: {}", clientInfo.getClientInfoId());
-                    transactionManager.rollback(transStatus);   //--Clear Transaction
                     continue;   //--Do it again
                 }
                 //--Save the rest data after all @Version entities are saved correctly.
@@ -123,45 +116,65 @@ public class ExportBillService {
                         .build());
                 }
                 exportBillWarehouseGoodsRepository.saveAll(newExportBillWhGoodsRelationship);
-                transactionManager.commit(transStatus);
 
-                fluxedGoodsFromWarehouseCrud.deleteAllByUserEmail(email);
+                redisFGFWHTemplateService.deleteData(FluxedGoodsFromWarehouse.NAME + ":" + email + "*");
                 fluxedAsyncService.updateFluxedGoodsFromWarehouseQuantityInRedis(updatedWarehouseGoodsList);
-
-                break;
+                return;
             } catch (RuntimeException e) {
-                transactionManager.rollback(transStatus);
                 log.info("Unaware exception throw when working with Hibernate, ExportBill Transactional rollback!");
                 throw new ApplicationException(ErrorCodes.UNAWARE_ERR);
             }
         }
-        log.info("Too many threads on ExportBill");
+        log.info("Too many threads on ExportBill, transaction timeout");
         throw new ApplicationException(ErrorCodes.RETRY_TOO_MANY_TIMES);
     }
 
     public List<ExportBill> getTop5ExportBills(String accessToken) {
-        // Lấy thông tin người dùng từ JWT
-        String username = jwtService.readPayload(accessToken).get("sub").toString();
-
-        // Lấy thông tin client từ repository dựa trên email người dùng
         var clientInfo = clientInfoRepository
-                .findByUserEmail(username)
-                .orElseThrow(() -> new ApplicationException(ErrorCodes.INVALID_TOKEN));
-
+            .findByUserEmail(jwtService.readPayload(accessToken).get("sub"))
+            .orElseThrow(() -> new ApplicationException(ErrorCodes.INVALID_TOKEN));
         // Lấy 3 hóa đơn xuất khẩu mới nhất
-        return exportBillRepository.findTop5ByClientInfoIdOrderByCreatedTimeDesc(clientInfo.getClientInfoId(), PageRequest.of(0, 5));
+        return exportBillRepository.findTop5ByClientInfoIdOrderByCreatedTimeDesc(clientInfo.getClientInfoId(),
+            PageRequest.of(0, 5));
     }
 
     public List<ExportBillDetailsResponse> getExportBillDetails(Long exportBillId) {
-        // Truy vấn tất cả chi tiết liên quan đến exportBillId
-        List<ExportBillWarehouseGoods> goodsList = exportBillWarehouseGoodsRepository.findByExportBill_ExportBillId(exportBillId);
+        return exportBillWarehouseGoodsRepository.findByExportBill_ExportBillId(exportBillId).stream()
+            .map(goods -> new ExportBillDetailsResponse(
+                goods.getExportBillWarehouseGoodsId(),
+                goods.getWarehouseGoods(),
+                goods.getGoodsQuantity()))
+            .collect(Collectors.toList());
+    }
 
-        // Chuyển đổi dữ liệu thành DTO
-        return goodsList.stream()
-                .map(goods -> new ExportBillDetailsResponse(
-                        goods.getId(),
-                        goods.getWarehouseGoods(),
-                        goods.getGoodsQuantity()))
-                .collect(Collectors.toList());
+    public TablePagesResponse<ExportBillWarehouseGoods> getExportBillWarehouseGoods(
+        String accessToken, PaginatedRelationshipRequest request) {
+        Pageable pageableCf = pageMappers.relationshipPageRequestToPageable(request)
+            .toPageable(ExportBillWarehouseGoods.class);
+        var clientInfo = clientInfoRepository
+            .findByUserEmail(jwtService.readPayload(accessToken).get("sub"))
+            .orElseThrow(() -> new ApplicationException(ErrorCodes.INVALID_TOKEN));
+
+        if (Objects.isNull(request.getFilterFields()) || request.getFilterFields().isEmpty()) {
+            Page<ExportBillWarehouseGoods> repoRes = exportBillWarehouseGoodsRepository
+                .findAllByClientInfoIdAndExportBillId(clientInfo.getClientInfoId(), request.getId(), pageableCf);
+            return TablePagesResponse.<ExportBillWarehouseGoods>builder()
+                .data(repoRes.stream().toList())
+                .totalPages(repoRes.getTotalPages())
+                .currentPage(request.getPage())
+                .build();
+        }
+        try {
+            var filterInfo = ExportBillWarehouseGoodsFilterRequest.buildFromFilterHashMap(request.getFilterFields());
+            var repoRes = exportBillWarehouseGoodsRepository.findAllByClientInfoIdAndExportBillIdAndFilterInfo(
+                filterInfo, clientInfo.getClientInfoId(), request.getId(), pageableCf);
+            return TablePagesResponse.<ExportBillWarehouseGoods>builder()
+                .data(repoRes.stream().toList())
+                .totalPages(repoRes.getTotalPages())
+                .currentPage(request.getPage())
+                .build();
+        } catch (NoSuchFieldException | IllegalArgumentException | NullPointerException e) {
+            throw new ApplicationException(ErrorCodes.INVALID_FILTERING_FIELD_OR_VALUE);
+        }
     }
 }
